Revert "Add prepack script"
This reverts commit b37d8ac557020ee3b6e3c03221b3cb671a8878d8.

--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "codesandbox-ci": "run-s build",
     "prerelease": "run-s clean:build test dist",
     "release": "ts-node ./scripts/release.ts",
-    "publish-ci": "npm publish",
-    "prepack": "npm run build"
+    "publish-ci": "npm publish"
   },
   "husky": {
     "hooks": {
