--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "codesandbox-ci": "run-s build",
     "prerelease": "run-s clean:build test dist",
     "release": "ts-node ./scripts/release.ts",
-    "publish-ci": "npm publish"
+    "publish-ci": "npm publish",
+    "prepack": "npm run build"
   },
   "husky": {
     "hooks": {
